# panes

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  README.pt-BR.md  README.zh-CN.md  cc1.txt  claurst-vendor-integration.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/panes-agent/: Cargo.toml
crates/panes-agent/src/: lib.rs
crates/panes-agent/src/application/: mod.rs  ports.rs  run_agent_turn.rs
crates/panes-agent/src/domain/: agents.rs  budget.rs  conversation.rs  memory.rs  mod.rs  permission.rs  provider.rs  skills.rs  structured_output.rs  system_prompt.rs  telemetry.rs  tools.rs
crates/panes-agent/src/infrastructure/: anthropic.rs  env_files.rs  google_gemini.rs  memory_files.rs  mod.rs  openai_compatible.rs  skills.rs  testing.rs
crates/panes-agent/src/infrastructure/anthropic/: pricing.rs  retry.rs
crates/panes-agent/src/infrastructure/anthropic/fixtures/: messages_tool_use_recording.sse
crates/panes-agent/src/infrastructure/native_tools/: apply_patch.rs  batch_edit.rs  command.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  list_files.rs  mod.rs  monitor.rs  paths.rs  search.rs  skill.rs  specs.rs  tasks.rs
crates/panes-agent/src/interfaces/: agent_runtime.rs  mod.rs
crates/panes-agent/tests/: live_llm.rs  runtime_text_turn.rs
docs/: cuelight-distribution.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.cuelight.conf.json
src-tauri/icons-cuelight/: icon.icns
src-tauri/src/: lib.rs  linux_appimage.rs  locale.rs  models.rs  process_utils.rs  provider_config.rs  runtime_env.rs  state.rs  terminal_notifications.rs
src-tauri/src/commands/: app.rs  chat.rs  cuelight.rs  engines.rs  harness.rs  mod.rs  setup.rs  threads.rs
src-tauri/src/contexts/: mod.rs
src-tauri/src/contexts/agent_runtime/claude_code_native/: mod.rs
src-tauri/src/contexts/agent_runtime/codex/: mod.rs
src-tauri/src/contexts/agent_runtime/codex_event_mapper/: mod.rs
src-tauri/src/contexts/agent_runtime/cuelight/: domain.rs  tests.rs  tools.rs
src-tauri/src/contexts/agent_runtime/cuelight/application/: mod.rs
src-tauri/src/contexts/agent_runtime/cuelight/infrastructure/: auth.rs  mod.rs
src-tauri/src/contexts/agent_runtime/opencode/: mod.rs
src-tauri/src/contexts/conversation/application/: chat.rs
src-tauri/src/contexts/notification_delivery/: terminal_notifications.rs
src-tauri/src/contexts/power_management/: macos.rs  macos_helper.rs  mod.rs  monitor.rs
src-tauri/src/contexts/source_control/: repo.rs
src-tauri/src/contexts/terminal_session/: mod.rs  osc_notifications.rs
src-tauri/src/contexts/thread_lifecycle/application/: threads.rs
src-tauri/src/db/: mod.rs  workspaces.rs
src-tauri/src/engines/: claude_code_native.rs  claude_sidecar.rs  claurst_native.rs  codex.rs  codex_event_mapper.rs  cuelight_tools.rs  events.rs  mod.rs  opencode.rs
src-tauri/src/git/: mod.rs  repo.rs
src-tauri/src/power/: mod.rs
src-tauri/src/terminal/: mod.rs
(+574 files in other folders)
