[workspace]
members = [
    "src-tauri",
    "vendor/claude-code-rust",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
