[package]
name = "Panes"
version = "0.59.1"
edition = "2021"
authors = ["Panes contributors"]
license = "MIT"

[lib]
name = "agent_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Claude Code Rust integration
claude_code_rs = { path = "../vendor/claude-code-rust", default-features = false, features = ["i18n"] }

tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

tokio = { workspace = true }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = { workspace = true }
async-trait = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
libc = "0.2"

rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
which = "6"
flate2 = "1"
tar = "0.4"

git2 = { version = "0.19", features = ["vendored-openssl"] }
notify = "6"
portable-pty = "0.8"
sys-locale = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
non-native-harnesses = []

[profile.dev]
# Keep local debug builds inspectable without letting `target/` explode as quickly.
debug = 1
